--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -5,6 +5,9 @@ services:
     container_name: prometheus
     volumes:
       - "./prometheus.yml:/etc/prometheus/prometheus.yml"
+      - "./rules/:/etc/prometheus/rules/"
+    command:
+      - '--config.file=/etc/prometheus/prometheus.yml'    
     ports:
       - 9090:9090
       
@@ -19,6 +22,7 @@ services:
       - GF_SECURITY_ADMIN_PASSWORD=admin
     volumes:
       - ./grafana:/etc/grafana/provisioning/datasources
+      - ./grafanadata:/var/lib/grafana
 
   node-exporter:
     image: prom/node-exporter:latest
