--- a/prometheus.yml
+++ b/prometheus.yml
@@ -2,6 +2,15 @@
 global:
   scrape_interval: 15s
 
+alerting:
+  alertmanagers:
+    - static_configs:
+      - targets:
+
+rule_files:
+  - './rules/prometheus.rules.yml'
+  - './rules/alerting.rules.yml'
+
 scrape_configs:
   - job_name: 'prometheus'
 
