--- a/prometheus.yml
+++ b/prometheus.yml
@@ -24,6 +24,11 @@ scrape_configs:
     scrape_interval: 5s
     static_configs:
       - targets: ['node-exporter:9100']
+  
+  - job_name: 'cadvisor'
+    scrape_interval: 5s
+    static_configs:
+      - targets: ['cadvisor:8080']
 
   - job_name: 'blackbox'
     metrics_path: /probe
