--- a/loki/promtail-config.yaml
+++ b/loki/promtail-config.yaml
@@ -1,23 +1,27 @@
 server:
   http_listen_port: 9080
-  grpc_listen_port: 0
+  grpc_listen_port: 9097
 
 positions:
   filename: /tmp/positions.yaml
 
 clients:
-  - url: http://loki:3100/loki/api/v1/push
+  - url: 'http://loki:3100/loki/api/v1/push'
 
 scrape_configs:
-- job_name: system
-  static_configs:
-  - targets:
-      - localhost
-    labels:
-      job: varlogs
-      __path__: /var/log/*log
-  - targets:
-      - localhost
-    labels:
-      job: nginxlogs
-      __path__: /var/log/nginx/*log
+  - job_name: system
+    static_configs:
+      - targets:
+          - localhost
+        labels:
+          job: varlogs
+          __path__: /var/log/*log
+
+  - job_name: nginx
+    static_configs:
+      - targets:
+          - localhost
+        labels:
+          job: nginxlogs
+          __path__: /var/log/nginx/*log
+
