add email alerts using alertmanager

--- a/alertmanager/docker-compose.yml
+++ b/alertmanager/docker-compose.yml
@@ -46,6 +46,6 @@ services:
       - 9093:9093
     restart: unless-stopped
     volumes:
-      - "./alertmanager.yml:/etc/alertmanager/alertmanager.yml"
+      - "./email_alert.yml:/etc/alertmanager/email_alert.yml"
     command:
-      - "--config.file=/etc/alertmanager/alertmanager.yml"
+      - "--config.file=/etc/alertmanager/email_alert.yml"
