--- a/loki/docker-compose.yml
+++ b/loki/docker-compose.yml
@@ -2,18 +2,19 @@ version: '3'
 services:
   
   prometheus:
-    image: prom/prometheus
+    image: prom/prometheus:latest
     container_name: prometheus
     volumes:
       - "../prometheus.yml:/etc/prometheus/prometheus.yml"
       - "../rules/:/etc/prometheus/rules/"
+      - prometheus-data:/prometheus
     command:
       - '--config.file=/etc/prometheus/prometheus.yml'    
     ports:
       - 9090:9090
 
   grafana:
-    image: grafana/grafana
+    image: grafana/grafana:latest
     container_name: grafana
     ports:
       - 3000:3000
@@ -23,9 +24,10 @@ services:
       - GF_SECURITY_ADMIN_PASSWORD=admin
     volumes:
       - ./grafana:/etc/grafana/provisioning/datasources
+      - grafana_data:/var/lib/grafana
 
   loki:
-    image: grafana/loki
+    image: grafana/loki:latest
     container_name: loki
     restart: unless-stopped
     ports:
@@ -33,13 +35,30 @@ services:
     volumes:
       - ./loki-config.yaml:/mnt/config/loki-config.yaml
     command: --config.file=/mnt/config/loki-config.yaml
+    
   
   promtail:
-    image: grafana/promtail
+    image: grafana/promtail:latest
     container_name: promtail
     restart: unless-stopped
     volumes:
       - ./promtail-config.yaml:/mnt/config/promtail-config.yaml
+      - /var/run/docker.sock:/var/run/docker.sock
       - /var/log:/var/log:ro
       - /var/log/nginx:/var/log/nginx:ro
-    command: --config.file=/mnt/config/promtail-config.yaml
+    command: --config.file=/mnt/config/promtail-config.yaml -config.expand-env=true
+
+  AlertManager:
+    image: prom/alertmanager
+    container_name: alertmanager
+    ports:
+      - 9093:9093
+    restart: unless-stopped
+    volumes:
+      - "../alertmanager/email_alert.yml:/etc/alertmanager/email_alert.yml"
+    command:
+      - "--config.file=/etc/alertmanager/email_alert.yml"
+
+volumes:
+  prometheus-data:
+  grafana_data:
