--- a/loki/promtail-config.yaml
+++ b/loki/promtail-config.yaml
@@ -1,6 +1,6 @@
 server:
   http_listen_port: 9080
-  grpc_listen_port: 9097
+  grpc_listen_port: 0
 
 positions:
   filename: /tmp/positions.yaml
@@ -25,3 +25,15 @@ scrape_configs:
           job: nginxlogs
           __path__: /var/log/nginx/*log
 
+  - job_name: docker
+    docker_sd_configs:
+      - host: unix:///var/run/docker.sock
+    relabel_configs:
+      - source_labels: [__meta_docker_container_name]
+        target_label: container
+      - source_labels: [__meta_docker_container_label_com_docker_compose_service]
+        target_label: compose
+      - source_labels: [__meta_docker_container_name]
+        regex: '(.+)'
+        target_label: __path__
+        replacement: '/var/lib/docker/containers/*/$1-json.log'
